apps/applications/home/bar-assistant/bar-assistant-deployment.yaml
# Deployment for the Bar Assistant Backend Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-assistant
  labels:
    app: bar-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bar-assistant
  template:
    metadata:
      labels:
        app: bar-assistant
        networking/expose-http-api: "true"
    spec:
      containers:
        - name: bar-assistant-server
          image: ghcr.io/karlomikus/barassistant
          ports:
            - containerPort: 8080
              name: http-api
          volumeMounts:
            - name: bar-data
              mountPath: /var/www/cocktails/storage/bar-assistant
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: bar-data
          persistentVolumeClaim:
            claimName: bar-assistant-config-pvc
