apps/applications/home/bar-assistant/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bar-assistant-policy
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app: bar-assistant
  ingress:
    # Allow access from Salt Rim frontend (in case it proxies)
    - fromEndpoints:
        - matchLabels:
            app: salt-rim
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # Allow loopback
    - fromEndpoints:
        - matchLabels:
            app: bar-assistant
  egress:
    # Allow access to Redis
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: redis
            app: redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    # Allow access to Meilisearch
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: default
            app.kubernetes.io/name: meilisearch
      toPorts:
        - ports:
            - port: "7700"
              protocol: TCP
    # Allow access to Authelia (via Traefik or World) for OIDC validation
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow loopback
    - toEndpoints:
        - matchLabels:
            app: bar-assistant
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: salt-rim-policy
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app: salt-rim
  ingress:
    []
